More Data Added

--- a/ElosEternos.html
+++ b/ElosEternos.html
@@ -258,6 +258,29 @@
             'PEÇAS DE SHAKESPEARE': ['HAMLET', 'ROMEU E JULIETA', 'MACBETH', 'OTELO', 'SONHO', 'A MEGERA DOMADA', 'O REI LEAR'],
             'PINTORES FAMOSOS': ['DA VINCI', 'PICASSO', 'VAN GOGH', 'MONET', 'REMBRANDT', 'DALI', 'MICHELANGELO'],
             'DIRETORES DE CINEMA': ['SPIELBERG', 'TARANTINO', 'HITCHCOCK', 'KUBRICK', 'SCORSESE', 'COPPOLA', 'CAMERON'],
+            'GÊNEROS DE FILME': ['AÇÃO', 'COMÉDIA', 'DRAMA', 'TERROR', 'FICÇÃO', 'SUSPENSE', 'ROMANCE', 'ANIMAÇÃO'],
+            'PERSONAGENS DE CONTOS DE FADA': ['CINDERELA', 'CHAPEUZINHO', 'PINÓQUIO', 'ALADDIN', 'ARIEL', 'PETER PAN', 'SININHO', 'GENIO'],
+            'VILÕES DA DISNEY': ['URSULA', 'GASTÃO', 'JAFAR', 'SCAR', 'MALEVOLA', 'CAPITÃO GANCHO', 'HADES', 'CRUELA'],
+            'INSTRUMENTOS DE SOPRO': ['FLAUTA', 'CLARINETE', 'TROMBONE', 'TROMPETE', 'SAXOFONE', 'TUBA', 'OBOÉ', 'FAGOTE'],
+            'TIPOS DE PINTURA': ['ÓLEO', 'AQUARELA', 'ACRÍLICA', 'FRESCO', 'GOUACHE', 'TEMPERA', 'DIGITAL'],
+
+            // Cotidiano e Objetos
+            'MATERIAIS DE CONSTRUÇÃO': ['TIJOLO', 'CIMENTO', 'AREIA', 'FERRO', 'MADEIRA', 'VIDRO', 'AÇO', 'GRANITO'],
+            'ITENS DE PAPELARIA': ['CADERNO', 'AGENDA', 'APONTADOR', 'MOCHILA', 'ESTOJO', 'FICHÁRIO', 'CORRETIVO', 'MARCA-TEXTO'],
+            'FERRAMENTAS DE JARDINAGEM': ['PÁ', 'RASTELO', 'TESOURA', 'ENXADA', 'MANGUEIRA', 'REGADOR', 'CARRINHO', 'ANCINHO'],
+            'EQUIPAMENTOS DE ACADEMIA': ['HALTER', 'ESTEIRA', 'BARRA', 'ANILHA', 'CORDA', 'BOLA', 'ELÍPTICO', 'KETTLEBELL'],
+
+            // Abstrato e Diversos
+            'VIRTUDES': ['CORAGEM', 'JUSTIÇA', 'SABEDORIA', 'BONDADE', 'PACIÊNCIA', 'HUMILDADE', 'PERDÃO', 'GRATIDÃO'],
+            'SABORES BÁSICOS': ['DOCE', 'SALGADO', 'AMARGO', 'AZEDO', 'UMAMI'],
+            'FIGURAS DE LINGUAGEM': ['METÁFORA', 'IRONIA', 'HIPÉRBOLE', 'ANTÍTESE', 'EUFEMISMO', 'PERSONIFICAÇÃO', 'COMPARAÇÃO', 'ALITERAÇÃO'],
+            'CAPITAIS ASIÁTICAS': ['TÓQUIO', 'PEQUIM', 'SEUL', 'BANGCOC', 'NOVA DÉLHI', 'JACARTA', 'MANILA', 'HANÓI'],
+            'TIPOS DE CLIMA': ['TROPICAL', 'DESÉRTICO', 'MEDITERRÂNEO', 'CONTINENTAL', 'OCEÂNICO', 'POLAR', 'SUBTROPICAL'],
+            'FERRAMENTAS DE COZINHA': ['FACA', 'TABUA', 'LIQUIDIFICADOR', 'BATEDEIRA', 'FORNO', 'FOGAO', 'MICROONDAS', 'PROCESSADOR'],
+            'TIPOS DE TECIDOS': ['ALGODÃO', 'SEDA', 'LINHO', 'LÃ', 'JEANS', 'VELUDO', 'CAMURÇA', 'POLIÉSTER'],
+            'TIPOS DE PINTURA AUTOMOTIVA': ['METÁLICA', 'PEROLIZADA', 'FOSCA', 'CROMADA', 'SÓLIDA'],
+            'TIPOS DE LUZ': ['NATURAL', 'ARTIFICIAL', 'DIFUSA', 'DIRECIONAL', 'AMARELA', 'BRANCA', 'FRIA', 'QUENTE'],
+            'TIPOS DE TECNOLOGIA': ['ANALÓGICA', 'DIGITAL', 'WIRELESS', 'CLOUD', 'IA', 'BLOCKCHAIN', 'IOT', '5G'],
 
             // Ciência e Conhecimento
             'FIGURAS GEOMÉTRICAS': ['CÍRCULO', 'QUADRADO', 'TRIÂNGULO', 'RETÂNGULO', 'LOSANGO', 'TRAPÉZIO', 'PENTÁGONO', 'HEXÁGONO', 'CUBO', 'ESFERA'],
@@ -274,6 +297,14 @@
             'LINGUAGENS DE PROGRAMAÇÃO': ['PYTHON', 'JAVA', 'JAVASCRIPT', 'C++', 'RUBY', 'SWIFT', 'GO', 'PHP'],
             'PEDRAS PRECIOSAS': ['DIAMANTE', 'RUBI', 'ESMERALDA', 'SAFIRA', 'AMETISTA', 'TOPÁZIO', 'OPALA', 'TURQUESA'],
             'CORPOS D\'ÁUA': ['RIO', 'LAGO', 'MAR', 'OCEANO', 'RIACHO', 'LAGOA', 'REPRESA', 'CÓRREGO'],
+            'PLANETAS DO SISTEMA SOLAR': ['MERCÚRIO', 'VÊNUS', 'MARTE', 'JÚPITER', 'SATURNO', 'URANO', 'NETUNO', 'PLUTÃO'],
+            'ÓRGÃOS DO CORPO HUMANO': ['CORAÇÃO', 'CÉREBRO', 'PULMÃO', 'FÍGADO', 'RIM', 'ESTÔMAGO', 'INTESTINO', 'PELE'],
+            'AVES DE RAPINA': ['ÁGUIA', 'FALCÃO', 'CORUJA', 'GAVIÃO', 'URUTAU', 'HARPIA', 'PENEIREIRO', 'CARCARÁ'],
+            'ACIDENTES GEOGRÁFICOS': ['MONTANHA', 'VALE', 'PLANÍCIE', 'CÂNION', 'ILHA', 'PENÍNSULA', 'GOLFO', 'FIORDE'],
+            'FLORES EXÓTICAS': ['ORQUÍDEA', 'BROMÉLIA', 'HIBISCO', 'ANTÚRIO', 'GÉRBERA', 'LÓTUS', 'FRÉSIA', 'AMARÍLIS'],
+            'TIPOS DE ROCHAS': ['ÍGNEA', 'SEDIMENTAR', 'METAMÓRFICA', 'GRANITO', 'BASALTO', 'ARENITO', 'CALCÁRIO', 'XISTO'],
+            'PARTES DE UMA CÉLULA': ['NÚCLEO', 'MITOCÔNDRIA', 'RIBOSSOMO', 'CITOPLASMA', 'MEMBRANA', 'CLOROPLASTO', 'VACÚOLO', 'LISOSSOMO'],
+            
 
             // Pessoas e Sociedade
             'PROFISSÕES': ['MÉDICO', 'PROFESSOR', 'BOMBEIRO', 'ATOR', 'ENGENHEIRO', 'ADVOGADO', 'JUIZ', 'DENTISTA', 'JORNALISTA', 'COZINHEIRO'],
@@ -301,6 +332,18 @@
             'MARCAS ESPORTIVAS': ['NIKE', 'ADIDAS', 'PUMA', 'REEBOK', 'ASICS', 'MIZUNO', 'FILA', 'TOPPER'],
             'COMPANHIAS AÉREAS': ['LATAM', 'GOL', 'AZUL', 'EMIRATES', 'LUFTHANSA', 'DELTA', 'TAP', 'AMERICAN'],
             'MARCAS DE LUXO': ['GUCCI', 'PRADA', 'LOUIS VUITTON', 'ROLEX', 'CHANEL', 'DIOR', 'FERRARI', 'VERSACE'],
+
+            // Tecnologia e Mundo Digital
+            'TERMOS DA INTERNET': ['NAVEGADOR', 'WIFI', 'EMAIL', 'DOWNLOAD', 'STREAMING', 'HASHTAG', 'BLOG', 'PODCAST'],
+            'COMPONENTES DE COMPUTADOR': ['PROCESSADOR', 'MEMÓRIA', 'PLACA-MÃE', 'HD', 'SSD', 'GABINETE', 'FONTE', 'COOLER'],
+            'GIGANTES DA TECNOLOGIA': ['GOOGLE', 'APPLE', 'MICROSOFT', 'AMAZON', 'META', 'IBM', 'INTEL', 'NVIDIA'],
+            'TERMOS DE FOTOGRAFIA': ['LENTE', 'FOCO', 'ZOOM', 'FLASH', 'OBTURADOR', 'DIAFRAGMA', 'ISO', 'TRIPÉ'],
+
+            // História e Cultura
+            'DEUSES DO OLIMPO': ['ZEUS', 'HERA', 'POSEIDON', 'ARES', 'ATENA', 'APOLO', 'ÁRTEMIS', 'HADES'],
+            'FIGURAS HISTÓRICAS': ['NAPOLEÃO', 'CLEÓPATRA', 'CÉSAR', 'EINSTEIN', 'NEWTON', 'GANDHI', 'MANDELA', 'DA VINCI'],
+            'CIVILIZAÇÕES ANTIGAS': ['ROMA', 'GRÉCIA', 'EGITO', 'PÉRSIA', 'MAIA', 'ASTECA', 'INCA', 'VIKING'],
+            'FERIADOS BRASILEIROS': ['NATAL', 'PÁSCOA', 'CARNAVAL', 'TIRADENTES', 'FINADOS', 'PROCLAMAÇÃO', 'INDENPENDÊNCIA', 'TRABALHO'],
 
             // Estações e Tempo
             'ESTAÇÕES DO ANO': ['VERÃO', 'INVERNO', 'OUTONO', 'PRIMAVERA'],
