--- a/ElosEternos.html
+++ b/ElosEternos.html
@@ -316,6 +316,9 @@
             'CRIATURAS MÍTICAS': ['DRAGÃO', 'GRIFO', 'FÊNIX', 'UNICÓRNIO', 'SEREIA', 'CENTAURO', 'MINOTAURO', 'CICLOPE'],
             'DEUSES EGÍPCIOS': ['RÁ', 'ANÚBIS', 'HÓRUS', 'ÍSIS', 'OSÍRIS', 'SET', 'THOTH', 'BASTET'],
             'PAÍSES DA AMÉRICA DO SUL': ['BRASIL', 'ARGENTINA', 'CHILE', 'COLÔMBIA', 'PERU', 'VENEZUELA', 'EQUADOR', 'URUGUAI'],
+            'IDIOMAS DO MUNDO': ['INGLÊS', 'ESPANHOL', 'FRANCÊS', 'ALEMÃO', 'MANDARIM', 'JAPONÊS', 'RUSSO', 'ÁRABE'],
+            'PROFISSÕES ARTÍSTICAS': ['MÚSICO', 'PINTOR', 'ESCRITOR', 'ATOR', 'DANÇARINO', 'CINEASTA', 'FOTÓGRAFO', 'ESCULTOR'],
+            'FERRAMENTAS DE ARTISTA': ['PINCEL', 'TINTA', 'MASSA', 'CAVALLETE', 'ESPÁTULA', 'LAPIS DE COR', 'CARVÃO', 'PALETA'],
 
             // Lazer e Esportes
             'TERMOS DE XADREZ': ['REI', 'RAINHA', 'TORRE', 'BISPO', 'CAVALO', 'PEÃO', 'XEQUE', 'ROQUE', 'EMPATE', 'GAMBITO'],
