Fix formatting and update element retrieval

--- a/ElosEternos.html
+++ b/ElosEternos.html
@@ -78,7 +78,7 @@
         }
 
         .info-card .label {
-            font-size: 0.75rem; /* Ajustado para caber melhor */
+            font-size: 0.75rem;
             color: #aaa;
             display: block;
             text-transform: uppercase;
@@ -361,7 +361,7 @@
         const mistakesLeftSpan = document.getElementById('mistakes-left');
         const statsPlayedEl = document.getElementById('stats-played');
         const statsWonEl = document.getElementById('stats-won');
-        const statsLossesEl = document.getElementById('stats-losses'); // Novo elemento
+        const statsLossesEl = document.getElementById('stats-losses');
         const statsRateEl = document.getElementById('stats-rate');
         const foundGroupsContainer = document.getElementById('found-groups');
         const gameContainer = document.getElementById('game-container');
